# bazel-latex

./: BUILD.bazel  README.md  WORKSPACE  latex.bzl  repositories.bzl  toolchain.bzl
example/: BUILD.bazel  my_report.tex
