load("@bazel_latex//:latex.bzl", "latex_document")

latex_document(
    name = "my_report",
    srcs = glob([
        "chapters/*.tex",
    ]) + [
        "//example/example_class:example_class",
    ],
    main = "my_report.tex",
)

latex_document(
    name = "my_dvi_report",
    srcs = glob([
        "chapters/*.tex",
    ]) + [
        "//example/example_class:example_class",
    ],
    format = "dvi",
    main = "my_report.tex",
)
